Fix: Headline and icon still sometimes clash
In the designs, there's even more margin, but I settled for a rather
minimal amount now that avoids collisions. It does look weird in German,
but I guess that's how it is.

--- a/features/polyPreview/src/styles.css
+++ b/features/polyPreview/src/styles.css
@@ -119,7 +119,7 @@ button:active {
 }
 
 .header-content {
-    margin-right: 84px;
+    margin-right: 100px;
 }
 
 .circle-pagination {
